--- a/src/Components/WindowContainer/windowContainer.scss
+++ b/src/Components/WindowContainer/windowContainer.scss
@@ -35,16 +35,62 @@
   }
 
   .title {
-    padding: 8px;
     white-space: nowrap;
     width: 100%;
+    padding: 4px 4px 0 4px;
+    cursor: move;
+
     border-bottom: 1px solid var(--border-light);
 
-    cursor: grab;
+    .titleTabBar {
+      padding-right: 24px;
+
+      &.singleTab {
+        padding: 1px 4px 0 0;
+
+        .titleTab {
+          &:hover {
+            background: #efefef;
+          }
+
+          max-width: fit-content;
+          cursor: move;
+          border: 0;
+          margin-bottom: 0;
+          padding-left: 5px;
+          padding-right: 5px;
+        }
+      }
+
+      .titleTab {
+        margin-bottom: -1px;
+
+        padding-left: 4px;
+        background: #efefef;
+        border: 1px solid #ccc;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        max-width: 150px;
+
+        &.titleTabActive {
+          border-bottom-color: transparent;
+          background: #fff;
+        }
+
+        &.titleTabHidden {
+          .titleText {
+            visibility: hidden;
+          }
+        }
+      }
+
+    }
 
     .titleText {
       overflow: hidden;
       text-overflow: ellipsis;
+      width: 100%;
+      display: inline-block;
     }
   }
 
@@ -53,7 +99,7 @@
   }
 
   .content {
-    padding: 8px;
+    padding: 8px 4px 4px;
     overflow: auto;
 
     &.fillHeight {
