--- a/src/Components/WindowContainer/windowContainer.scss
+++ b/src/Components/WindowContainer/windowContainer.scss
@@ -1,3 +1,10 @@
+.disabled {
+  pointer-events: none;
+
+  &.windowContainer {
+    z-index: 110;
+  }
+}
 
 .windowContainer {
   background: white;
@@ -53,6 +60,10 @@
             background: #efefef;
           }
 
+          &.titleTabHidden:hover {
+            background: white;
+          }
+
           max-width: fit-content;
           cursor: move;
           border: 0;
@@ -64,7 +75,6 @@
 
       .titleTab {
         margin-bottom: -1px;
-
         padding-left: 4px;
         background: #efefef;
         border: 1px solid #ccc;
@@ -78,6 +88,8 @@
         }
 
         &.titleTabHidden {
+          display: none;
+
           .titleText {
             visibility: hidden;
           }
