--- a/src/Components/WindowContainer/windowContainer.scss
+++ b/src/Components/WindowContainer/windowContainer.scss
@@ -30,6 +30,11 @@
   border: 1px solid var(--border-light);
   border-radius: 4px;
   animation: 70ms popInAnimation;
+  user-select: none;
+
+  &:focus-within {
+    user-select: initial;
+  }
 
   &.active {
     z-index: 101;
